fix position monster on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -223,7 +223,7 @@ html {
     left: calc(50% - 145px);
   }
   #fenkarol-quiz .next-page-block .monster.monster--small {
-    right: -31px;
+    right: -62px;
   }
 }
 #fenkarol-quiz .library {
