--- a/scss/utils/_base.scss
+++ b/scss/utils/_base.scss
@@ -272,7 +272,7 @@ ol {
       }
 
       &.monster--small {
-        right: -31px;
+        right: -62px;
       }
     }
   }
